enable_google_now = false
enable_hangout_services_extension = true
enable_hotwording = false
enable_mdns = true
enable_nacl = false
enable_wayland_server = false
enable_webrtc = true
enable_widevine = true
fieldtrial_testing_like_official_build = true
is_component_build = true
is_component_ffmpeg = true
is_debug = false
is_desktop_linux = true
remove_webcore_debug_symbols = true
symbol_level = 1
treat_warnings_as_errors = false
use_allocator = "none"
use_alsa = true
use_aura = true
use_cups = true
use_dbus = true
use_gio = true
use_glib = true
use_gold = false
use_gtk3 = false
use_libpci = true
use_pulseaudio = true
use_sysroot = false
use_system_harfbuzz = false
use_system_libjpeg = false
use_system_sqlite = false
rtc_enable_protobuf = false
is_clang = false
clang_base_path = "/usr"
clang_use_chrome_plugins = false
target_os = "linux"
current_os = "linux"
target_cpu = "x64"
google_api_key = "AIzaSyDGQzx0c0ptZVDriLi9Wblo2voeLnmPq-o"
google_default_client_id =
    "424119844901-tilod0e1nm0dt85e1evrdfp3cc3ec01d.apps.googleusercontent.com"
google_default_client_secret = "WCCejhqORuxKG272GAWxsPIU"
proprietary_codecs = true
ffmpeg_branding = "Chrome"
